# static/swagger.json
@@ -1,228 +1,347 @@
 {
-"openapi": "3.0.0",
-    "info": {
-      "title": "Email Test Server API",
-      "description": "API for Email Test Server",
-      "version": "1.0.0"
-    },
-    "paths": {
-        "/user":{
-            "post":{
-                "summary":"create a new user",
-                "requestBody":{
-                    "required" : true,
-                    "content":{
-                        "application/json":{
-                            "schema":{
-                            "$ref": "#/components/schemas/User"
-                            }
-                        }
-                    }
-                },
-                "response":{
-                    "200" :{
-                        "description": "Users created success",
-                        "content":{
-                            "application/json":{
-                                "schema":{
-                                    "$ref":"#/components/schemas/User"
-                                }
-                            }
-                        }
-                    }       
-                }
-            },
-            "get":{
-                "summary" : "Get all users",
-                "responses":{
-                    "200":{
-                        "description": "Successful response",
-                        "content":{
-                            "application/json":{
-                                "schema": {
-                                    "type" :"array",
-                                    "items" : {
-                                        "$ref" :"#/components/schemas/User"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
+  "openapi": "3.0.0",
+  "info": {
+    "title": "Email Test Server API",
+    "description": "API for Email Test Server",
+    "version": "1.0.0"
+  },
+  "paths": {
+    "/user": {
+      "post": {
+        "summary": "create a new user",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              }
             }
+          }
         },
-        "/user/{id}":{
-            "get":{
-                "summary": "Get a user by Id",
-                "parameters":[
-                    {
-                        "name" :"id",
-                        "in" : "path",
-                        "requireed" : true,
-                        "schema":{
-                            "type":"integer"
-                        }
-                    }
-                ],
-                "responses":{
-                    "200": {
-                      "description": "Successful response",
-                      "content": {
-                        "application/json": {
-                          "schema": {
-                            "$ref": "#/components/schemas/User"
-                          }
-                        }
-                      }
-                    }
-                  }         
-            },
-            "put":{
-                "summary": "Update a user",
-                "parameters": [
-                  {
-                    "name": "id",
-                    "in": "path",
-                    "required": true,
-                    "schema": {
-                      "type": "integer"
-                    }
-                  }
-                ],
-                "requestBody": {
-                  "required": true,
-                  "content": {
-                    "application/json": {
-                      "schema": {
-                        "$ref": "#/components/schemas/User"
-                      }
-                    }
-                  }
-                },
-                "responses": {
-                  "200": {
-                    "description": "User updated successfully",
-                    "content": {
-                      "application/json": {
-                        "schema": {
-                          "$ref": "#/components/schemas/User"
-                        }
-                      }
-                    }
-                  }
+        "response": {
+          "200": {
+            "description": "Users created success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
                 }
-            },
-            "delete": {
-                "summary": "Delete a user",
-                "parameters": [
-                  {
-                    "name": "id",
-                    "in": "path",
-                    "required": true,
-                    "schema": {
-                      "type": "integer"
-                    }
-                  }
-                ],
-                "responses": {
-                  "200": {
-                    "description": "User deleted successfully",
-                    "content": {
-                      "application/json": {
-                        "schema": {
-                          "$ref": "#/components/schemas/User"
-                        }
-                      }
-                    }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "summary": "Get all users",
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/User"
                   }
                 }
               }
-            },
-        "/dashboard_item":{
-            "post":{
-                "summary" :"create a new dashboard item",
-                "RequestBody":{
-                    "required" : true,
-                    "content" : {
-                        "application/json" : {
-                            "schema":{
-                                "$ref":"#/components/schemas/DashbaordItem"
-                            }
-                        }
-                    }
-                },
-                "response": {
-                    "200": {
-                      "description": "User deleted successfully",
-                      "content": {
-                        "application/json": {
-                          "schema": {
-                            "$ref": "#/components/schemas/User"
-                          }
-                        }
-                      }
-                    }
-                  }
-                },
-            "get":{
-                "summary": "Get all dashbaord items",
-                "responses" :{
-                    "200": {
-                      "description": "User deleted successfully",
-                      "content": {
-                        "application/json": {
-                          "schema": {
-                            "$ref": "#/components/schemas/User"
-                          }
-                        }
-                      }
-                    }
-                  }
             }
-        },
-        "/users": {
-            "get": {
-            "summary": "Returns a list of users",
-            "responses": {
-                "200": {
-                "description": "Successful response",
-                "content": {
-                    "application/json":{
-                        "schema":{
-                            "type": "array",
-                            "items": {
-                            "$ref": "#/components/schemas/User"                               
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
+          }
         }
+      }
     },
-    "components": {
-        "schemas":{
-            "User": {
-                "type": "object",
-                "properties": {
-                  "id": {"type": "integer"},
-                  "username": {"type": "string"},
-                  "email": {"type": "string"}
-                }
-              },
-            "DashboardItem": {
-                "type": "object",
-                "properties": {
-                  "id": {"type": "integer"},
-                  "title": {"type": "string"},
-                  "value": {"type": "string"},
-                  "description": {"type": "string"}
+    "/user/{id}": {
+      "get": {
+        "summary": "Get a user by Id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "requireed": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
                 }
               }
-
+            }
+          }
         }
-    
+      },
+      "put": {
+        "summary": "Update a user",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "User updated successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete a user",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User deleted successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/training": {
+      "post": {
+        "summary": "craete new training empty array",
+        "tags": ["Training"],
+        "RequestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Training"
+              }
+            }
+          }
+        },
+        "response": {
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Training"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "summary": "Get all training",
+        "tags": ["Training"],
+        "response": {
+          "200": {
+            "description": "Success response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Training"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/dashboard_item": {
+      "post": {
+        "summary": "create a new dashboard item",
+        "RequestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/DashbaordItem"
+              }
+            }
+          }
+        },
+        "response": {
+          "200": {
+            "description": "User deleted successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "summary": "Get all dashbaord items",
+        "responses": {
+          "200": {
+            "description": "User deleted successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users": {
+      "get": {
+        "summary": "Returns a list of users",
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/User"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
-    
+  },
+  "components": {
+    "schemas": {
+      "User": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer" },
+          "username": { "type": "string" },
+          "email": { "type": "string" }
+        }
+      },
+      "Training": {
+        "type": "object",
+        "required": [
+          "trainingName",
+          "trainingStart",
+          "trainingEnd",
+          "resourceUser"
+        ],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "readOnly": "true",
+            "description": "The auto-generated id of the training"
+          },
+          "trainingName": { "type": "string", "description": "Name" },
+          "trainingDesc": { "type": "string", "description": "Description" },
+          "traningStart": {
+            "type": "string",
+            "format": "date",
+            "description": "Start date of training (YYYY-MM-DD)"
+          },
+          "trainingEnd": {
+            "type": "string",
+            "foramt": "date",
+            "description": "End date of trainign (YYYY-MM-DD)"
+          },
+          "resourceUser": {
+            "type": "integer",
+            "description": "choose random resource users from data"
+          },
+          "maxPhisingMail": {
+            "type": "integer",
+            "description": "maximum number of phising emials"
+          }
+        }
+      },
+
+      "DashboardItem": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer" },
+          "title": { "type": "string" },
+          "value": { "type": "string" },
+          "description": { "type": "string" }
+        }
+      },
+      "Error": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string"
+          }
+        }
+      }
+    }
+  }
 }
